@@ -62,7 +62,7 @@ public class StatusTool extends ToolBase {
             .required(false)
             .desc(
                 "Address of the Solr Web application, defaults to: "
-                    + SolrCLI.DEFAULT_SOLR_URL
+                    + SolrCLI.getDefaultSolrUrl()
                     + '.')
             .build(),
         Option.builder("maxWaitSecs")
@@ -76,7 +76,7 @@ public class StatusTool extends ToolBase {
   @Override
   public void runImpl(CommandLine cli) throws Exception {
     int maxWaitSecs = Integer.parseInt(cli.getOptionValue("maxWaitSecs", "0"));
-    String solrUrl = cli.getOptionValue("solr", SolrCLI.DEFAULT_SOLR_URL);
+    String solrUrl = cli.getOptionValue("solr", SolrCLI.getDefaultSolrUrl());
     if (maxWaitSecs > 0) {
       int solrPort = (new URL(solrUrl)).getPort();
       echo("Waiting up to " + maxWaitSecs + " seconds to see Solr running on port " + solrPort);
